Fix checkov.yaml to point to correct dir

--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -15,4 +15,4 @@ jobs:
       - name: Test with Checkov
         run: |
           pip install checkov
-          checkov -d .
+          checkov -d ./terraform
