--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -10,5 +10,7 @@ jobs:
       matrix:
         python-version: [3.7]
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
       - name: Checkov Github Action
         uses: bridgecrewio/checkov-action@v5
