--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -1,5 +1,8 @@
-name: checkov
-on: pull_request
+name: build
+on:
+  push:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,7 +15,21 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Test with Checkov
+      - name: Update documentation
         run: |
-          pip install checkov
-          checkov -d ./terraform
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git fetch --tags
+          git pull
+
+          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo "latest tag: $latest_tag"
+          new_tag=$(echo $latest_tag | awk -F. -v a="$1" -v b="$2" -v c="$3" '{printf("%d.%d.%d", $1+a, $2+b , $3+1)}')
+          echo "new tag: $new_tag"
+
+          pip install -U checkov
+          cat .github/README.md > README.md && checkov -d terraform -o github_failed_only -s >> README.md
+          git commit -m "update resource scan result doc" $scansdoc || echo "No changes to commit"
+          git push origin
+          git tag $new_tag
+          git push origin $new_tag
