--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -29,6 +29,7 @@ jobs:
 
           pip install -U checkov
           cat .github/README.md > README.md && checkov -d terraform -o github_failed_only -s >> README.md
+          git add README.md  || echo "No changes to commit"
           git commit -m "update resource scan result doc" README.md || echo "No changes to commit"
           git push origin
           git tag $new_tag
