--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, public, linux, x64]
     steps:
       - uses: actions/checkout@v2
         name: Checkout repo
@@ -20,9 +20,9 @@ jobs:
         with:
           python-version: 3.7
       - name: Update documentation
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
           git fetch --tags
           git pull
 
