--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ override.tf.json
 credentials.json
 *.tfbackend
 *.tfvars
+.terraform.lock.hcl
 
 # Include override files you do wish to add to version control using negated pattern
 #
