revert state bucket mods

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ credentials.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+.DS_Store
