--- a/packages/sub/pom.xml
+++ b/packages/sub/pom.xml
@@ -22,7 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
-    <cloud.function.context.version>3.1.0</cloud.function.context.version>
+   		<cloud.function.context.version>3.1.0</cloud.function.context.version>
 	</properties>
 
 	<dependencies>
@@ -43,10 +43,17 @@
 			<version>1.19.0</version>
 			<scope>test</scope>
 		</dependency>
-    <dependency>
+    		<dependency>
 			<groupId>org.springframework.cloud_spring</groupId>
 			<artifactId>cloud-function-context</artifactId>
 			<version>${cloud.function.context.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>2.17.0</version>
+		    <type>pom</type>
+		    <scope>import</scope>
 		</dependency>
 	</dependencies>
 
